JDK-7197033 : missing ResourceMark for assert in Method::bci_from()
  • Type: Bug
  • Component: hotspot
  • Sub-Component: compiler
  • Affected Version: hs25
  • Priority: P4
  • Status: Resolved
  • Resolution: Fixed
  • OS: generic
  • CPU: generic
  • Submitted: 2012-09-07
  • Updated: 2013-06-26
  • Resolved: 2012-09-18
The Version table provides details related to the release that this issue/RFE will be addressed.

Unresolved : Release in which this issue/RFE will be addressed.
Resolved: Release in which this issue/RFE has been resolved.
Fixed : Release in which this issue/RFE has been fixed. The release containing this fix may be available for download as an Early Access Release or a General Availability Release.

To download the current JDK release, click here.
JDK 7 JDK 8 Other
7u40Resolved 8Fixed hs24Fixed
Description
I just hit this problem duting my work on other bug:

  [1] report_fatal(file = 0xfeac4c4c "src/share/vm/memory/resourceArea.hpp", line = 74, message = 0xfeac4cad "memory leak: allocating without ResourceMark"), line 232 in "src/share/vm/utilities/debug.cpp"
  [2] ResourceArea::allocate_bytes(this = 0x8e41218, size = 23U), line 74 in "src/share/vm/memory/resourceArea.hpp"
  [3] resource_allocate_bytes(size = 23U), line 49 in "src/share/vm/memory/resourceArea.cpp"
  [4] Symbol::as_C_string(this = 0x8e35468), line 137 in "src/share/vm/oops/symbol.cpp"
  [5] Symbol::as_klass_external_name(this = 0x8e35468), line 196 in "src/share/vm/oops/symbol.cpp"
  [6] Klass::external_name(this = 0xf4db0c70), line 573 in "src/share/vm/oops/klass.cpp"
  [7] Method::name_and_sig_as_C_string(klass = 0xf4db0c70, method_name = 0x8e35598, signature = 0x8e41c00), line 160 in "src/share/vm/oops/method.cpp"
  [8] Method::name_and_sig_as_C_string(this = 0xf4dae3b8), line 152 in "src/share/vm/oops/method.cpp"
=>[9] Method::bci_from(this = 0xf4dae3b8, bcp = 0xf4dae393 "\xcaQ9!QY)2\x8c^Yy11^Y11!Q)9B)!\x82!;9^Y^Z)RI"), line 255 in "src/share/vm/oops/method.cpp"
  [10] InterpreterRuntime::get_original_bytecode_at(thread = 0x8e42000, method = 0xf4dae3b8, bcp = 0xf4dae393 "\xcaQ9!QY)2\x8c^Yy11^Y11!Q)9B)!\x82!;9^Y^Z)RI"), line 648 in "src/share/vm/interpreter/interpreterRuntime.cpp"

Comments
EVALUATION http://hg.openjdk.java.net/hsx/hotspot-comp/hotspot/rev/8d3cc6612bd1
18-09-2012